# PetVet

./: .gitignore  LICENSE  README.md  makefile  mkdocs.yml  pyproject.toml  requirements.txt
PetVet/: db.sqlite3  manage.py  pyproject.toml
PetVet/PetVet/: asgi.py  settings.py  urls.py  wsgi.py
PetVet/core/: admin.py  forms.py  models.py  urls.py  views.py
PetVet/core/migrations/: 0001_initial.py  0002_alter_pets_weight_alter_tutor_tutor_name_and_more.py  0002_pets_remove_procedures_doctor_and_more.py  0003_medicalcare_tutor_vet_alter_pets_breed_and_more.py  0003_remove_generalclinic_type_anamnese_and_more.py  0004_alter_generalclinic_options_and_more.py  0004_pets_medical_care_tutor_pet_vet_medical_care_and_more.py  0005_alter_physicalexam_options_and_more.py  0005_remove_pets_medical_care_remove_tutor_pet_and_more.py  0006_alter_medicalcare_id_alter_medicalcare_sedative.py  0006_alter_physicalexam_choice_pain_m_and_more.py  0007_generaldhermexam.py  0007_tutor_city_alter_tutor_state.py  0008_alter_generaldhermexam_options_and_more.py  0008_alter_medicalcare_date_alter_medicalcare_pet_name_and_more.py  0009_alter_medicalcare_pet_name_and_more.py  0009_generaldhermexam_quest_31_previne_carrapatos_and_more.py  0010_alter_medicalcare_options_alter_pets_options_and_more.py  0010_generaldhermexam_quest_38_diarr_and_more.py  0011_alter_tutor_cpf_alter_tutor_phone.py  0011_generaldhermexam_quest_46_agitado_and_more.py  0012_alter_tutor_cep_alter_tutor_phone.py  (+4 more)
PetVet/core/templates/: index.html  (+1 more)
PetVet/users/: forms.py  models.py  urls.py  views.py
docs/: index.md
(+42 files in other folders)
