[tool.poetry]
name = "petvet"
version = "0.1.0"
description = "Web App para uma clinica veterinaria"
authors = ["Joey-Resende <givanildo.resende@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"
django-braces = "^1.15.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
mkdocs = "^1.2.3"
prospector = "^1.7.7"
pip-audit = "^2.1.0"
blue = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
